# douyin-to-text

./: .gitignore  README.md  SKILL.md  pyproject.toml
examples/: agent_usage.md  obsidian_workflow.md
src/douyin_to_text/: __init__.py  __main__.py  cli.py  downloader.py  output.py  resolver.py  transcriber.py  utils.py
src/douyin_to_text/engines/: __init__.py  base.py  faster_whisper_engine.py  sensevoice.py
tests/: conftest.py  test_cli.py  test_output.py  test_resolver.py
